--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -24,7 +24,7 @@ spring:
   #Database 설정
   datasource:
     driver-class-name: org.mariadb.jdbc.Driver
-    url : jdbc:mariadb://222.239.249.197:3306/smart
+    url : jdbc:mariadb://222.239.249.197:3306/smart_db
     username: root
     password: ehdduf922
     type: com.zaxxer.hikari.HikariDataSource
