--- a/src/main/resources/application-prd.yml
+++ b/src/main/resources/application-prd.yml
@@ -11,9 +11,7 @@ server:
   port: 9090  #나중에 aws port 로 변경
   file:
     upload:
-      path: C:\\files\\upload\\board\\
-    editor:
-      path: C:\\files\\upload\\editor\\
+      path: C:\\files\\upload\\books\\
 
 spring:
   main:
