--- a/build.gradle
+++ b/build.gradle
@@ -67,10 +67,10 @@ dependencies {
 
     //json 라이브러리
     implementation 'org.json:json:20250517'
-    implementation 'org.modelmapper:modelmapper:3.2.4'
+    implementation 'org.modelmapper::3.2.4'
 
-    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.6.0'
-}
+    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.13'
+}modelmapper
 
 tasks.named('test') {
     useJUnitPlatform()
